[gd_scene load_steps=40 format=2]

[ext_resource path="res://characters/sprites/mc-idle-v2.png" type="Texture" id=1]
[ext_resource path="res://characters/sprites/mc-walk-v2.png" type="Texture" id=2]
[ext_resource path="res://characters/enemy1.gd" type="Script" id=3]
[ext_resource path="res://characters/sprites/mc-hurt.png" type="Texture" id=4]
[ext_resource path="res://objects/up_fireRate.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/sprites/enemy-spawn.png" type="Texture" id=6]
[ext_resource path="res://game/sounds/hit-sound.ogg" type="AudioStream" id=7]
[ext_resource path="res://game/sounds/enemy-death.ogg" type="AudioStream" id=8]
[ext_resource path="res://characters/sprites/spawn-water.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 6 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": false,
"name": "spawn",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), ExtResource( 4 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=19]
radius = 5.94364
height = 7.3187

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 9 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 9 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="Animation" id=39]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/path = NodePath("spawnWater:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 3 )
drops = [ ExtResource( 5 ) ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0, 0.345098, 1, 1 )
frames = SubResource( 18 )
animation = "spawn"

[node name="Area2D" type="Area2D" parent="." groups=[
"enemy",
]]

[node name="Hurtbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.451866, 2.94254 )
shape = SubResource( 19 )

[node name="hitstun" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="pause" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="hitsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="deathsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="spawnWater" type="AnimatedSprite" parent="."]
frames = SubResource( 29 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/spawn = SubResource( 39 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="hitstun" to="." method="_on_hitstun_timeout"]
[connection signal="timeout" from="pause" to="." method="_on_pause_timeout"]
